[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/scripts/modules/DialogueModule.gd" type="Script" id=1]

[node name="DialogueModule" type="Node2D"]
script = ExtResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="TalkingPosition" type="Node2D" parent="."]
position = Vector2( 0, -8 )

[connection signal="body_entered" from="InteractionArea" to="." method="player_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="player_exited"]
